<resources>
    <string name="app_name">Maptionary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_draw">DrawMap</string>
    <string name="ToDrawActivity">To Draw</string>


    <string name="drawings_button">My Drawings</string>
    <string name="home_title">Term 2 Project</string>
    <string name="drawing_name">Name of your drawing</string>
    <string name="line_colour">Line colour</string>
    <string name="map_type">Map type</string>
    <string name="start_drawing">Start Drawing</string>
    <string name="title_drawing_list">Drawings</string>
    <string name="title_drawing_detail">Drawing Detail</string>
    <string name="title_activity_global_drawings">Global Drawings</string>
    <string name="global_drawings">Global drawings</string>
    <string name="add_vote">Vote</string>
    <string name="remove_vote">Undo Vote</string>

    <string-array name="drawing_spinner">
        <item>New</item>
        <item>View</item>
        <item>Edit</item>
        <item>Delete</item>
        <item>Upload</item>
    </string-array>
    <string name="menu_item_new">New</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_view">View</string>
    <string name="menu_item_upload">Upload</string>
    <string name="drawing_activity_buttonStateTrue">STOP RECORDING</string>
    <string name="drawing_activity_buttonStateFalse">EXTEND CURRENT LINE</string>


    <string name="uploadTitle">Title : %s</string>
    <string name="uploadCategory">Category : %s</string>
    <string name="uploadMapType">Map type : %s</string>
    <string name="uploadFragmentAmount">Fragment amount : %d</string>
    <string name="uploadButton">Upload drawing</string>
    <string name="uploadPreview">Map preview</string>


    <string name="toast_error_parsing_map">Unable to create a map object.</string>
    <string name="toast_success_uploading_map">Good job! You have successfully uploaded a drawing to the global stage.
        Click here to view.
    </string>
    <string name="toast_error_uploading_map">Unable to upload map.</string>
    <string name="toast_max_lines">You can\'t have more than 9 lines!</string>
    <string name="toast_view_fragments">View x fragments.</string>
    <string name="toast_error_deleting_last_line">You can\'t delete the last line! If you want to delete the drawing
        please do so from the list.
    </string>
    <string name="toast_recording_stopped">Recording stopped</string>
    <string name="toast_line_created">Line %d has been created.</string>
    <string name="toast_line_edit">Editing line: %d</string>
    <string name="toast_fragment_selected">%d was selected.</string>
    <string name="drawing_settings_activity">Drawing Settings</string>
    <string name="drawing_activity">Drawing</string>
    <string name="main_menu_activity">Maptionary</string>
    <string name="toast_deleting_editing_line">You cannot delete the line that you are currently editing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_prefrence">color_prefrence</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">Channel for notifications</string>
</resources>
